Fix action always being static